# GeoDeep

./: CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: conf.py  index.rst
geodeep/: __init__.py  ckdtree.py  debug.py  detection.py  geodeep.py  inference.py  models.py  segmentation.py  slidingwindow.py  utils.py
geodeep/scripts/: convert_retinanet_to_onnx.py  inspect_model.py  main.py  yolo2geodeep.py
scripts/: convert_retinanet_to_onnx.py  main.py
