[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.6"
name = "geodeep"
description = "Free and open source library for AI object detection and semantic segmentation in geospatial rasters"
version = "0.9.11"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Piero Toffanin", email = "pt@uav4geo.com" },
    { name = "GeoDeep Authors" },
]
maintainers = [
    { name = "Piero Toffanin", email = "pt@uav4geo.com" },
    { name = "GeoDeep Authors" },
]
keywords = [
    "Python",
    "object-detection",
    "semantic-segmentation",
    "geospatial",
    "geotiff",
]
classifiers = [
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",    
]

dependencies = [
    "rasterio>=1.2.9",
    "onnxruntime>=1.10.0",
]

[project.scripts]
geodeep = "geodeep.scripts.main:main"
geodeep-inspect = "geodeep.scripts.inspect_model:main"
yolo2geodeep = "geodeep.scripts.yolo2geodeep:main"


[project.optional-dependencies]
test = [
    "pytest >=7.2.0",
]
dev = [
    "pillow>=11.1.0",
    "torch>=2.5.1",
    "onnxsim>=0.4.36",
    "onnx>=1.17.0",
]
docs = [
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
]

[tool.hatch.build.targets.wheel]
packages = ["geodeep"]

[tool.hatch.build.targets.sdist]
packages = ["geodeep"]

[project.urls]
Homepage = "https://github.com/uav4geo/GeoDeep"
Source = "https://github.com/uav4geo/GeoDeep"
Documentation = "https://github.com/uav4geo/GeoDeep"
Tracker = "https://github.com/uav4geo/GeoDeep/issues"
History = "https://github.com/uav4geo/GeoDeep/releases"

[tool.hatch.envs.default]
features = [
    "test",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
